# Lab1C

./: README.md
solution/: CMakeLists.txt
solution/include/: bmp_io.h  image.h  transform.h
solution/src/: bmp_io.c  image.c  main.c  transform.c
